--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 
-    <title>Welcome to SplitReader main page</title>
+    <title>Welcome to SplitReader log in page</title>
 </head>
 <body ng-app="SplitReaderApp">
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">SplitReader</a>
+        <a class="navbar-brand" href="#">SplitReader. Log in page</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,12 +30,11 @@
         </div>
     </nav>
     <h1 class="mx-auto mt-5 text-center">Welcome to SplitReader main page</h1>
-    <input ng-model="csrf.token" class="form-control">
     <div class="mx-auto mt-5 login-form" ng-controller="LoginCtrl">
         <form name="loginForm">
             <div class="form-group">
-                <label for="email">Email address</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" ng-model="userAuthData.email" required>
+                <label for="user-name">Email address</label>
+                <input type="email" class="form-control" id="user-name"  name="username" ng-model="userAuthData.email" required>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
