AngularJS auth. Login page

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -34,14 +34,7 @@
     <div class="content mx-auto">
         <div class="main-body">
             <h1>Добро пожаловать на главную SplitReader</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam tenetur, labore eos officiis id soluta dolorem iste. Recusandae officia harum, unde nulla laborum ab necessitatibus consequatur. Quibusdam architecto modi mollitia?</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam tenetur, labore eos officiis id soluta dolorem iste. Recusandae officia harum, unde nulla laborum ab necessitatibus consequatur. Quibusdam architecto modi mollitia?</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque recusandae nam incidunt odio, qui aspernatur voluptatem assumenda quibusdam at, accusantium minima rem enim facere earum dolorum delectus eligendi veritatis tenetur.
-            Corrupti, in dolor ipsa aperiam soluta nam ipsam tempora dolorum itaque sed, vero blanditiis maiores, doloremque necessitatibus perspiciatis voluptates eum omnis! Rem placeat tempora aspernatur doloribus esse excepturi doloremque cupiditate!
-            Reiciendis, in. Voluptatem nostrum laboriosam quo perferendis vitae dolor eligendi doloribus atque rerum accusantium nemo quod, ea corporis sequi quam non! Perspiciatis alias pariatur asperiores animi doloribus maiores, sequi repudiandae!
-            Quo et harum hic accusantium rem dicta veniam quos sapiente illum! Nobis omnis placeat dolores odit quo, vitae provident, rem aut sit molestias quisquam atque commodi sapiente. Praesentium, nesciunt ut.
-            </p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam tenetur, labore eos officiis id soluta dolorem iste. Recusandae officia harum, unde nulla laborum ab necessitatibus consequatur. Quibusdam architecto modi mollitia?</p>
+            <p>Вы пытаетесь попасть на страницу, доступ к которой есть только у зарегистрированных пользователей. Для того, чтобы посетить эту страницу, пожалуйста, авторизуйтесь. Если у вас еще нет учетной записи на сайте, то пройдите, пожалуйста регистрацию</p>
         </div>
         <div class="login-form" ng-controller="LoginCtrl">
             <form name="loginForm">
