--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -44,17 +44,26 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam tenetur, labore eos officiis id soluta dolorem iste. Recusandae officia harum, unde nulla laborum ab necessitatibus consequatur. Quibusdam architecto modi mollitia?</p>
         </div>
         <div class="login-form" ng-controller="LoginCtrl">
-            <form name="loginForm">
-                <div class="form-group">
-                    <label for="email">Электронная почта</label>
-                    <input type="email" class="form-control login-form_input" id="email" aria-describedby="emailHelp" ng-model="userAuthData.email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Пароль</label>
-                    <input type="password" class="form-control login-form_input" id="password"  ng-model="userAuthData.password" required>
-                </div>
-                <button type="submit" class="btn btn-primary" ng-click="loginSubmit(userAuthData, loginForm)">Войти</button>
-            </form>
+            <div id="form_login_block">
+                <form name="loginForm">
+                    <div class="form-group">
+                        <label for="email">Электронная почта</label>
+                        <input type="email" class="form-control login-form_input" id="email" aria-describedby="emailHelp" ng-model="userAuthData.email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Пароль</label>
+                        <input type="password" class="form-control login-form_input" id="password"  ng-model="userAuthData.password" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary" ng-click="loginSubmit(userAuthData, loginForm)">Войти</button>
+                </form>
+            </div>
+            <div id="user_details_block" class="invisible">
+                    <div>
+                        <p>Электронная почта</p>
+                        <p>{{userDetails.email}}</p>
+                    </div>
+                    <a href="/login?logout" class="btn btn-primary">Выйти</a>
+            </div>
         </div>
     </div>
 </div>
