Hibernate storage for users details

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -62,7 +62,7 @@
                         <p>Электронная почта</p>
                         <p>{{userDetails.email}}</p>
                     </div>
-                    <a href="/login?logout" class="btn btn-primary">Выйти</a>
+                    <button type="submit" class="btn btn-primary" ng-click="logoutSubmit()">Выйти</button>
             </div>
         </div>
     </div>
