--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -52,6 +52,14 @@
             </div>
             <div id="user_details_block" class="invisible">
                     <div>
+                        <p>Имя</p>
+                        <p>{{userDetails.firstName}}</p>
+                    </div>
+                    <div>
+                        <p>Фамилия</p>
+                        <p>{{userDetails.lastName}}</p>
+                    </div>
+                    <div>
                         <p>Электронная почта</p>
                         <p>{{userDetails.email}}</p>
                     </div>
