saveUser and profile page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -69,7 +69,7 @@
                     </div>
                     <div>
                         <h5>Электронная почта</h5>
-                        <p>{{userDetails.email}}</p>
+                        <p>{{userDetails.username}}</p>
                     </div>
                 </div>
                 <div class="user-details__links">
