--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -45,7 +45,7 @@
                 </div>
                 <div>
                     <h5>Электронная почта</h5>
-                    <p>{{userDetails.email}}</p>
+                    <p>{{userDetails.username}}</p>
                 </div>
                 <button type="submit" class="btn btn-primary mt-3" ng-click="logoutSubmit()">Выйти</button>
         </div>
