Update user frontend

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="user-details__links">
                     <a href="profile.html" class="text-primary">Профиль</a>
-                    <a href="library" class="ml-3 text-primary">Библиотека</a>
+                    <a href="library.html" class="ml-3 text-primary">Библиотека</a>
                 </div>
                 <button type="submit" class="btn btn-primary mt-3" ng-click="logoutSubmit()">Выйти</button>
         </div>
