--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/profile.css">
 
     <title>SplitReader. Профиль.</title>
 </head>
@@ -18,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">На главную <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">На главную <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Библиотека</a>
@@ -32,22 +33,44 @@
 </div>
 <div class="container">
     <div class="profile__user-data login-form" ng-controller="ProfileCtrl">
-        <div class="profile_content mx-auto">
-            <h1>Профиль</h1>
+        <div class="profile_content mx-auto row">
+            <div class="profile-header">
+                <div class="col">
+                    <h1>Профиль</h1>
+                </div>
+                <div class="edit-profile_link col" id="edit-profile-link">
+                    <a href="#" ng-click="editProfile()" class="text-primary">Редактировать</a>
+                </div>
+            </div>
+            
             <div id="user_details_block">
-                <div>
+                <div class="form-group">
                     <h5>Имя</h5>
-                    <p>{{userDetails.firstName}}</p>
+                    <p id="first-name_text">{{userDetails.firstName}}</p>
                 </div>
-                <div>
+                <div class="form-group">
                     <h5>Фамилия</h5>
-                    <p>{{userDetails.lastName}}</p>
+                    <p id="last-name_text">{{userDetails.lastName}}</p>
                 </div>
-                <div>
+                <div class="form-group">
                     <h5>Электронная почта</h5>
-                    <p>{{userDetails.username}}</p>
+                    <p id="username_text">{{userDetails.username}}</p>
                 </div>
                 <button type="submit" class="btn btn-primary mt-3" ng-click="logoutSubmit()">Выйти</button>
+            </div>
+            <div class="user_details_edit_block invisible" id="user_details_edit_block">
+                <form name="editProfileForm">
+                    <div class="form-group">
+                        <label for="first-name">Имя</label>
+                        <input type="first-name" class="form-control login-form_input" id="first-name" aria-describedby="firstNameHelp" ng-model="userData.firstName">
+                    </div>
+                    <div class="form-group">
+                        <label for="last-name">Фамилия</label>
+                        <input type="last-name" class="form-control login-form_input" id="last-name" aria-describedby="lastNameHelp" ng-model="userData.lastName">
+                    </div>
+                    <button type="submit" class="btn btn-primary" ng-click="saveUserData(userData, editProfileForm)">Сохранить</button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
